finetuning on layout...changed next button on mobile size position to fixed from absolute

--- a/css/healthyish.css
+++ b/css/healthyish.css
@@ -137,7 +137,7 @@ body {
   border-right: 10px solid transparent;
   border-top: 10px solid #000000;
   background-color: transparent;
-  position: absolute;
+  position: fixed;
   bottom: 30px;
   right: 30px;
   z-index: 90;
